--- a/CircularIndicator/Base.lproj/Main.storyboard
+++ b/CircularIndicator/Base.lproj/Main.storyboard
@@ -672,7 +672,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="9lS-v0-aDE" customClass="CircularIndicator">
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="9lS-v0-aDE" customClass="MLCircularIndicator">
                                 <rect key="frame" x="20" y="20" width="150" height="150"/>
                             </customView>
                         </subviews>
